<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/background_center"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:background="@drawable/ic_background_center"
        android:foregroundGravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/transition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="67dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintStart_toStartOf="@id/background_center"
        app:layout_constraintEnd_toEndOf="@id/background_center"
        app:layout_constraintTop_toTopOf="@id/background_center"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/ic_arrow_back"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/infoUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintStart_toStartOf="@id/background_center"
        app:layout_constraintEnd_toEndOf="@id/background_center"
        app:layout_constraintTop_toBottomOf="@id/transition">

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/infoUserReg"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp">
            <EditText
                android:background="@null"
                android:text="@string/lastName"
                android:inputType="text"
                android:layout_gravity="center"
                style="@style/EditTextInfoUser"/>
        </FrameLayout>

        <FrameLayout

            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/infoUserReg"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp">

            <EditText
                style="@style/EditTextInfoUser"
                android:background="@null"
                android:text="@string/firstName"
                android:inputType="text"
                android:layout_gravity="center"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </FrameLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/infoUserReg"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp">

            <EditText
                style="@style/EditTextInfoUser"
                android:background="@null"
                android:text="@string/patronymic"
                android:inputType="text"
                android:layout_gravity="center"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </FrameLayout>

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/infoUserReg"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp">
            <EditText
                android:background="@null"
                android:text="@string/email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                style="@style/EditTextInfoUser"/>
        </FrameLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/infoUserReg"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <EditText
                style="@style/EditTextInfoUser"
                android:background="@null"
                android:text="@string/password"
                android:inputType="textWebPassword"
                android:letterSpacing="0.5"
                android:layout_marginStart="14dp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.0001"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_invisible_password"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/line"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintEnd_toEndOf="@id/background_center"
        app:layout_constraintStart_toStartOf="@id/background_center"
        app:layout_constraintTop_toBottomOf="@id/infoUser"/>

    <ImageButton
        android:id="@+id/buttonRegistration"
        android:layout_width="152dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="@id/background_center"
        app:layout_constraintEnd_toEndOf="@id/background_center"
        app:layout_constraintStart_toStartOf="@id/background_center"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck"></ImageButton>

    <TextView
        android:id="@+id/txtRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@id/buttonRegistration"
        app:layout_constraintStart_toStartOf="@id/buttonRegistration"
        app:layout_constraintEnd_toEndOf="@id/buttonRegistration"
        app:layout_constraintBottom_toBottomOf="@id/buttonRegistration"/>



</androidx.constraintlayout.widget.ConstraintLayout>