<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/backgroundUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background_up_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@id/backgroundUp"
        app:layout_constraintEnd_toEndOf="@id/backgroundUp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/settingsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/settingsText"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:text="@string/profileText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/exitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/exitText"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <ImageView
        android:id="@+id/addProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_plus"
        android:layout_marginTop="115dp"
        android:layout_marginStart="58dp"
        app:layout_constraintStart_toEndOf="@id/avatarka"
        app:layout_constraintTop_toBottomOf="@id/texts"
        app:layout_constraintEnd_toEndOf="@id/backgroundUp"
        tools:ignore="MissingConstraints"/>

    <ImageView
        android:id="@+id/avatarka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_avatarka"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="93dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/texts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="Петров Петр Петрович"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarka"/>

    <ImageView
        android:id="@+id/backgroundDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        app:layout_constraintStart_toStartOf="@id/backgroundDown"
        app:layout_constraintEnd_toEndOf="@id/backgroundDown"
        app:layout_constraintTop_toTopOf="@id/backgroundDown">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_projects_feed"
            android:layout_marginEnd="100dp"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_profil"
            android:layout_marginStart="100dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>